feat(class): Add a new endpoint for download the package saved image
